<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_23ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/studentNo"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <EditText
        android:id="@+id/stdNo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg"
        android:fontFamily="@font/allan_bold"
        android:hint="@string/studentNo"
        android:paddingLeft="@dimen/_25sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:id="@+id/textpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintTop_toBottomOf="@+id/stdNo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg"
        android:fontFamily="@font/acme"
        android:hint="@string/password"
        android:paddingLeft="@dimen/_25sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintTop_toBottomOf="@+id/textpwd"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg"
        android:text="@string/login"
        android:textSize="@dimen/_18ssp"
        app:icon="@drawable/next"
        app:iconGravity="end"
        app:iconSize="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="end"
        android:text="@string/forgot"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>