<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/account"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/first"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:layout_editor_absoluteX="6dp" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:text="@string/edit"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:gravity="center_vertical"
        android:textSize="@dimen/_20ssp"
        android:text="@string/first"
        android:layout_margin="@dimen/_2sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:gravity="center_vertical"
        android:textSize="@dimen/_20ssp"
        android:layout_margin="@dimen/_2sdp"
        android:text="@string/first"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/recent"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/email" />



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/booking_list" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_600sdp"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg"
        android:text="@string/logout"
        android:textSize="@dimen/_18ssp"
        app:icon="@drawable/next"
        app:iconGravity="end"
        app:iconSize="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>