<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".doctors.DiagnosisReport">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/diagnosis"
                android:textColor="@color/white"
                android:textSize="@dimen/_23ssp"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/materialButton">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialButton">

        <TextView
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/result"
            android:maxLines="1"
            android:paddingLeft="@dimen/_25sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toBottomOf="@+id/firstLayout" />

        <TextView
            android:id="@+id/lastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/recommendation"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginTop="72dp"
            android:hint="@string/recommendation"
            android:maxLines="1"
            android:paddingLeft="@dimen/_25sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toBottomOf="@+id/lastLayout"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/prescription"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <TextView
            android:id="@+id/purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/prescription"
            android:paddingLeft="@dimen/_25sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout" />

        <TextView
            android:id="@+id/approve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/prescription"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/purpose" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintTop_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>